<resources>
    <string name="app_name">DevCorner</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_home_page">Home</string>
    <string name="title_activity_home">Home</string>
    <string name="bottom_navigation_home">Home</string>
    <string name="exercise_answer_filed">Answer</string>
    <string name="bottom_navigation_account">Account</string>
    <string name="title_activity_new_exercise">Add new exercise</string>
    <string name="title_activity_about">About</string>
    <string name="register_header">Sign in</string>


    <!-- Button -->
    <string name="newExerciseBtn">Add</string>
    <string name="bottom_navigation_add">Add</string>
    <string name="done_btn">Done</string>
    <string name="signIn">SIGN IN</string>
    <string name="register">Register</string>
    <string name="create">Create account</string>

    <!-- Hints -->
    <string name="passwordHint">Enter your password…</string>
    <string name="newExerciseContentHint">Paste your exercise text…</string>
    <string name="newExerciseContentHeader">Your exercise title…</string>
    <string name="loginHint">Enter your login…</string>

    <!-- Menu items -->
    <string name="menuAbout">About</string>
    <string name="menuAccount">Account</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Title</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="app_logo">app-logo</string>
    <string name="splash_description">DevCorner</string>
    <string name="login_icon">log-in icon</string>
    <string name="add_button">+</string>
    <string name="save">Save</string>
    <string name="result_number">OK</string>
    <string name="exercise_result_image">Exercise result image</string>
    <string name="exercise_result_text">Result will be display here!</string>
    <string name="user_icon">user icon</string>
    <string name="log_out">Log out</string>
    <string name="all_your_exercise">All your exercises</string>
    <string name="username">username</string>
    <string name="card_language_divider">card_language_divider</string>
    <string name="language">Language</string>

    <!-- Messages Preferences -->
    <string name="compose_shortcut_short_label1">Add</string>
    <string name="compose_shortcut_long_label1">Add exercise</string>
    <string name="compose_disabled_message1">Add</string>
    <string name="title_activity_new_exercise_constructor">NewExerciseConstructor</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reorder">reorder</string>
    <string name="register_icon">Register icon</string>
    <string name="back_icon">Back icon</string>
</resources>
